--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       position: absolute;
       width: 60px;
       height: 60px;
-      background-image: url('https://github.com/rzamlna/ethosgame/blob/730b93c067567b363c1966fa97ebcc2c9119fbc6/ethos.jpg');
+      background-image: url('ethos.jpg');
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
