--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       position: absolute;
       width: 80px;
       height: 80px;
-      background-image: url('https://raw.githubusercontent.com/ethos-vision/ethos-assets/main/ethos-logo.png'); /* ganti sesuai logo asli */
+      background-image: url('ethos.jpg'); /* ganti sesuai logo asli */
       background-size: 60%;
       background-repeat: no-repeat;
       background-position: center;
