--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <div id="start-screen">
   Welcome to <strong>EthOS Drop</strong><br><br>
-  Enter your username:<br>
+  Enter your X username:<br>
   <input id="username-input" placeholder="e.g. cryptocat" autocomplete="off" /><br>
   <button onclick="startGame()">Start</button>
 </div>
