--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
   Enter your X username:<br>
   <input id="username-input" placeholder="e.g. cryptocat" autocomplete="off" /><br>
   <button onclick="startGame()">Start</button>
+  
+  <div style="margin-top: 15px; font-size: 0.9em; color: #088;">
+    Created by <a href="https://x.com/janeayaa" target="_blank" style="color: #0ff; text-decoration: none;">@janeayaa</a>
+  </div>
 </div>
 
 <div id="hud">
